@@ -5,8 +5,8 @@ from ldtp import *
 from ldtputils import *
 from A11yTestUtils import *
 
-program_name = 'gnome-background-properties'
-window_title = 'Desktop Background Preferences'
+program_name = 'gnome-passwd'
+window_title = 'Change Password'
 
 a11y_test_init (program_name)
 
@@ -14,6 +14,6 @@ guiexist (window_title)
 
 a11y_scan_window (window_title)
 	
-click (window_title, 'btnClose')
+click (window_title, 'btnCancel')
 
 a11y_test_shutdown ()
